# Obj_renderer

./: CMakeLists.txt  Note.md
include/object_recognition_renderer/: renderer.h  renderer3d.h  utils.h
include/object_renderer/: renderer.h  renderer2d.h  renderer3d.h  utils.h
src/: CMakeLists.txt  model.cpp  model.h  renderer2d.cpp  renderer3d.cpp  utils.cpp
src/apps/: CMakeLists.txt
src/assimp_test/: CMakeLists.txt  glut_opengl_test.cpp
src/backup/: Note
src/zyk_apps/: CMakeLists.txt  linemod_trainer.cpp  project_render_test.cpp  simple_opengl_test.cpp  view_based_ppf_trainner.cpp  view_generate.cpp
